test/tests/stages/18_structures/invalid_types/tag_resolution/invalid_shadow_self_reference.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: s
                  Bool: 0
                  List[1]: 
                    CMemberDeclaration: 
                      TIdentifier: nested
                      Structure: 
                        TIdentifier: s
                        Bool: 0
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
